# ChangeLog for dev-python/subvertpy
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/subvertpy/ChangeLog,v 1.37 2011/12/22 21:02:48 floppym Exp $

  22 Dec 2011; Mike Gilbert <floppym@gentoo.org> subvertpy-0.8.9.ebuild:
  Drop IUSE=test; distutils takes care of that.

  22 Dec 2011; Mike Gilbert <floppym@gentoo.org> subvertpy-0.8.9.ebuild:
  Set IUSE=test

  22 Dec 2011; Mike Gilbert <floppym@gentoo.org> subvertpy-0.8.9.ebuild:
  Test suite needs dev-python/unittest2 for <=python-2.6

*subvertpy-0.8.9 (21 Dec 2011)

  21 Dec 2011; Mike Gilbert <floppym@gentoo.org> +subvertpy-0.8.9.ebuild:
  Version bump.

*subvertpy-0.8.8 (11 Oct 2011)

  11 Oct 2011; Dirkjan Ochtman <djc@gentoo.org> +subvertpy-0.8.8.ebuild:
  Version bump to 0.8.8.

*subvertpy-0.8.5-r1 (07 Sep 2011)

  07 Sep 2011; Mike Gilbert <floppym@gentoo.org> +subvertpy-0.8.5-r1.ebuild:
  Don't remove tests: this breaks bzr selftest. Bug 382051 by Martin von
  Gagern.

*subvertpy-0.8.5 (30 Aug 2011)

  30 Aug 2011; Dirkjan Ochtman <djc@gentoo.org> +subvertpy-0.8.5.ebuild:
  Version bump to 0.8.5.

  17 Apr 2011; Thomas Kahle <tomka@gentoo.org> subvertpy-0.8.0.ebuild:
  x86 stable per bug 361975

  05 Apr 2011; Christoph Mende <angelos@gentoo.org> subvertpy-0.8.0.ebuild:
  Stable on amd64 wrt bug #361975

*subvertpy-0.8.0 (03 Mar 2011)

  03 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +subvertpy-0.8.0.ebuild:
  Version bump.

  11 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -subvertpy-0.7.3.1.ebuild, -subvertpy-0.7.4.ebuild:
  Delete.

  11 Jan 2011; Markus Meier <maekke@gentoo.org> subvertpy-0.7.5.ebuild:
  x86 stable, bug #348077

  09 Dec 2010; Markos Chandras <hwoarang@gentoo.org> subvertpy-0.7.5.ebuild:
  Stable on amd64 wrt bug #348077

  01 Nov 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  subvertpy-0.7.4.ebuild:
  x86 stable wrt bug #342497

*subvertpy-0.7.5 (27 Oct 2010)
