@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/subvertpy/subvertpy-0.8.9.ebuild,v 1.4 2011/12/22 21:02:48 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/subvertpy/subvertpy-0.8.9.ebuild,v 1.5 2011/12/22 21:26:33 floppym Exp $
 
 EAPI="3"
 PYTHON_DEPEND="2"
@@ -21,7 +21,11 @@ IUSE=""
 
 RDEPEND=">=dev-vcs/subversion-1.4"
 DEPEND="${RDEPEND}
-	test? ( || ( dev-lang/python:2.7 dev-python/unittest2 ) )"
+	test? ( || (
+		dev-lang/python:2.7
+		dev-python/unittest2
+		dev-python/testtools
+	) )"
 
 PYTHON_CFLAGS=("2.* + -fno-strict-aliasing")
 
