@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/subvertpy
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/subvertpy/ChangeLog,v 1.37 2011/12/22 21:02:48 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/subvertpy/ChangeLog,v 1.38 2011/12/22 21:26:33 floppym Exp $
+
+  22 Dec 2011; Mike Gilbert <floppym@gentoo.org> subvertpy-0.8.9.ebuild:
+  Add dev-python/testtools as a possible test alternative.
 
   22 Dec 2011; Mike Gilbert <floppym@gentoo.org> subvertpy-0.8.9.ebuild:
   Drop IUSE=test; distutils takes care of that.
